--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -27,16 +27,16 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 0ae3756b-c89d-4807-b0ae-2ad286b643c7
+      - 04645cb6-d8b7-4c9c-85b8-86f9a2f9169d
       X-Runtime:
-      - '0.034920'
+      - '0.474666'
       Content-Length:
       - '40'
     body:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Thu, 01 Oct 2015 02:04:22 GMT
+  recorded_at: Sat, 03 Oct 2015 20:38:11 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -60,20 +60,20 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"52380343d4036fef39d327d10bc39d5c"
+      - W/"0993713c30af0498ead745dd16376b25"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 96f2b2b8-25f3-4842-b2d5-e39d939bd1c6
+      - 8079cc81-2aca-41e1-a800-bd2d11e32396
       X-Runtime:
-      - '0.052137'
+      - '0.084208'
       Content-Length:
       - '250'
     body:
       encoding: UTF-8
-      string: '{"_id":"560c94a687f643da910000cb","created_at":"2015-10-01T02:04:22Z","updated_at":"2015-10-01T02:04:22Z","name":"John","email":"john@doe.net","locale":"en","api_key":"3afdf21b90124ddb143b7a5e1b59d4e57f657818","super_admin":false,"local_admin":false}'
+      string: '{"_id":"56103cb387f643192d000000","created_at":"2015-10-03T20:38:11Z","updated_at":"2015-10-03T20:38:11Z","name":"John","email":"john@doe.net","locale":"en","api_key":"f0a44c6c8d8a5801f4428218a0bb4c6b3fcbee7b","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Thu, 01 Oct 2015 02:04:22 GMT
+  recorded_at: Sat, 03 Oct 2015 20:38:11 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -97,23 +97,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"8f7bb6d4bda91174de729c222671de7b"
+      - W/"9daf6d0d2626d00f453f3d1d152601db"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 3c64f02a-8c20-4ac7-ad42-7c56ce1a6ee3
+      - af546a59-ae3e-4b51-bb37-78f3c0bd002b
       X-Runtime:
-      - '0.021167'
+      - '0.016184'
       Content-Length:
       - '32'
     body:
       encoding: UTF-8
-      string: '{"token":"EWq1AcSdTbv-mLoH-Piy"}'
+      string: '{"token":"jUa4fjiegGCvfiohwzNr"}'
     http_version: 
-  recorded_at: Thu, 01 Oct 2015 02:04:22 GMT
+  recorded_at: Sat, 03 Oct 2015 20:38:11 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=EWq1AcSdTbv-mLoH-Piy
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=jUa4fjiegGCvfiohwzNr
     body:
       encoding: US-ASCII
       string: ''
@@ -123,7 +123,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - EWq1AcSdTbv-mLoH-Piy
+      - jUa4fjiegGCvfiohwzNr
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -136,23 +136,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"586493796597e372abd0ae2a8bc7a847"
+      - W/"fda62ef44d17b3aec41e793130ca6825"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 38e8dc82-ab18-4954-be90-38edb14b0fe0
+      - cd0c9c4d-eb2e-4682-8a42-b6a2a6ab3535
       X-Runtime:
-      - '0.020298'
+      - '0.029665'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"560c949287f643e277000000","created_at":"2015-10-01T02:04:02Z","updated_at":"2015-10-01T02:04:02Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"56103bde87f643190b000000","created_at":"2015-10-03T20:34:38Z","updated_at":"2015-10-03T20:34:38Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Thu, 01 Oct 2015 02:04:22 GMT
+  recorded_at: Sat, 03 Oct 2015 20:38:11 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=EWq1AcSdTbv-mLoH-Piy
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=jUa4fjiegGCvfiohwzNr
     body:
       encoding: US-ASCII
       string: ''
@@ -162,7 +162,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - EWq1AcSdTbv-mLoH-Piy
+      - jUa4fjiegGCvfiohwzNr
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -175,18 +175,18 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"586493796597e372abd0ae2a8bc7a847"
+      - W/"fda62ef44d17b3aec41e793130ca6825"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - c9f8e60a-3326-4dab-8faf-8bade233fd1c
+      - e06b551e-f108-4741-bcc8-e037d9a1f162
       X-Runtime:
-      - '0.019768'
+      - '0.018328'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"560c949287f643e277000000","created_at":"2015-10-01T02:04:02Z","updated_at":"2015-10-01T02:04:02Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"56103bde87f643190b000000","created_at":"2015-10-03T20:34:38Z","updated_at":"2015-10-03T20:34:38Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Thu, 01 Oct 2015 02:04:22 GMT
+  recorded_at: Sat, 03 Oct 2015 20:38:11 GMT
 recorded_with: VCR 2.9.3
