--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -27,16 +27,16 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 04645cb6-d8b7-4c9c-85b8-86f9a2f9169d
+      - 9fd5095f-e1f8-46bd-af70-4937d8952fa9
       X-Runtime:
-      - '0.474666'
+      - '0.475989'
       Content-Length:
       - '40'
     body:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Sat, 03 Oct 2015 20:38:11 GMT
+  recorded_at: Sat, 03 Oct 2015 22:51:13 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -60,20 +60,20 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"0993713c30af0498ead745dd16376b25"
+      - W/"f11c118ac1f73d61c33c0fe3b83a4bbe"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 8079cc81-2aca-41e1-a800-bd2d11e32396
+      - 0d392097-4546-4dea-aed7-aa78812b2cc6
       X-Runtime:
-      - '0.084208'
+      - '0.076062'
       Content-Length:
       - '250'
     body:
       encoding: UTF-8
-      string: '{"_id":"56103cb387f643192d000000","created_at":"2015-10-03T20:38:11Z","updated_at":"2015-10-03T20:38:11Z","name":"John","email":"john@doe.net","locale":"en","api_key":"f0a44c6c8d8a5801f4428218a0bb4c6b3fcbee7b","super_admin":false,"local_admin":false}'
+      string: '{"_id":"56105be187f6432346000000","created_at":"2015-10-03T22:51:13Z","updated_at":"2015-10-03T22:51:13Z","name":"John","email":"john@doe.net","locale":"en","api_key":"d4e4bcc95dbaa0bc964fe5d759af3e17ae87b55f","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Sat, 03 Oct 2015 20:38:11 GMT
+  recorded_at: Sat, 03 Oct 2015 22:51:13 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -97,23 +97,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"9daf6d0d2626d00f453f3d1d152601db"
+      - W/"a9163fdeb161e2c161f3a0f3efe49ba1"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - af546a59-ae3e-4b51-bb37-78f3c0bd002b
+      - 45b0e958-c517-473e-aabb-6c905328665a
       X-Runtime:
-      - '0.016184'
+      - '0.016623'
       Content-Length:
       - '32'
     body:
       encoding: UTF-8
-      string: '{"token":"jUa4fjiegGCvfiohwzNr"}'
+      string: '{"token":"a2muK9TeBmVrpA5XrYQa"}'
     http_version: 
-  recorded_at: Sat, 03 Oct 2015 20:38:11 GMT
+  recorded_at: Sat, 03 Oct 2015 22:51:13 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=jUa4fjiegGCvfiohwzNr
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=a2muK9TeBmVrpA5XrYQa
     body:
       encoding: US-ASCII
       string: ''
@@ -123,7 +123,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - jUa4fjiegGCvfiohwzNr
+      - a2muK9TeBmVrpA5XrYQa
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -136,23 +136,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"fda62ef44d17b3aec41e793130ca6825"
+      - W/"eca3fa55990117bf008694b4895520d9"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - cd0c9c4d-eb2e-4682-8a42-b6a2a6ab3535
+      - fc3ee76e-4de2-4487-bfc4-9b51d7842cd7
       X-Runtime:
-      - '0.029665'
+      - '0.027375'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"56103bde87f643190b000000","created_at":"2015-10-03T20:34:38Z","updated_at":"2015-10-03T20:34:38Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"56105bac87f6432326000000","created_at":"2015-10-03T22:50:20Z","updated_at":"2015-10-03T22:50:20Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Sat, 03 Oct 2015 20:38:11 GMT
+  recorded_at: Sat, 03 Oct 2015 22:51:13 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=jUa4fjiegGCvfiohwzNr
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=a2muK9TeBmVrpA5XrYQa
     body:
       encoding: US-ASCII
       string: ''
@@ -162,7 +162,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - jUa4fjiegGCvfiohwzNr
+      - a2muK9TeBmVrpA5XrYQa
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -175,18 +175,18 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"fda62ef44d17b3aec41e793130ca6825"
+      - W/"eca3fa55990117bf008694b4895520d9"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - e06b551e-f108-4741-bcc8-e037d9a1f162
+      - f29a44e9-95b9-46ca-950c-522f4fc36cee
       X-Runtime:
-      - '0.018328'
+      - '0.013873'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"56103bde87f643190b000000","created_at":"2015-10-03T20:34:38Z","updated_at":"2015-10-03T20:34:38Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"56105bac87f6432326000000","created_at":"2015-10-03T22:50:20Z","updated_at":"2015-10-03T22:50:20Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Sat, 03 Oct 2015 20:38:11 GMT
+  recorded_at: Sat, 03 Oct 2015 22:51:13 GMT
 recorded_with: VCR 2.9.3
