--- a/spec/fixtures/cassettes/delete.yml
+++ b/spec/fixtures/cassettes/delete.yml
@@ -566,4 +566,82 @@ http_interactions:
       string: '{"error":"Resource not found"}'
     http_version: 
   recorded_at: Tue, 10 Nov 2015 02:58:13 GMT
+- request:
+    method: delete
+    uri: http://www.example.com:3000/locomotive/api/v3/pages/about-us.json?auth_token=YwabxyhKGciVnBPtx8Wm
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - application/json
+      X-Locomotive-Account-Email:
+      - admin@locomotivecms.com
+      X-Locomotive-Account-Token:
+      - YwabxyhKGciVnBPtx8Wm
+      X-Locomotive-Site-Handle:
+      - pleasant-winds-1002
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 404
+      message: Not Found
+    headers:
+      Content-Type:
+      - application/json
+      Cache-Control:
+      - no-cache
+      X-Request-Id:
+      - cdb3bad4-1bfc-415e-b5a6-468dd6b30b54
+      X-Runtime:
+      - '0.136474'
+      Content-Length:
+      - '30'
+    body:
+      encoding: UTF-8
+      string: '{"error":"Resource not found"}'
+    http_version: 
+  recorded_at: Sun, 22 Nov 2015 01:30:08 GMT
+- request:
+    method: delete
+    uri: http://www.example.com:3000/locomotive/api/v3/content_types/events.json?auth_token=YwabxyhKGciVnBPtx8Wm
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - application/json
+      X-Locomotive-Account-Email:
+      - admin@locomotivecms.com
+      X-Locomotive-Account-Token:
+      - YwabxyhKGciVnBPtx8Wm
+      X-Locomotive-Site-Handle:
+      - pleasant-winds-1002
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 404
+      message: Not Found
+    headers:
+      Content-Type:
+      - application/json
+      Cache-Control:
+      - no-cache
+      X-Request-Id:
+      - c14ccd18-6f7f-4009-a8ef-37bf9fb514fe
+      X-Runtime:
+      - '0.117859'
+      Content-Length:
+      - '30'
+    body:
+      encoding: UTF-8
+      string: '{"error":"Resource not found"}'
+    http_version: 
+  recorded_at: Sun, 22 Nov 2015 01:30:08 GMT
 recorded_with: VCR 2.9.3
