--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -27,16 +27,16 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 9fd5095f-e1f8-46bd-af70-4937d8952fa9
+      - 696238a9-e3ed-46c9-a3b0-fbcddc5dc502
       X-Runtime:
-      - '0.475989'
+      - '0.385558'
       Content-Length:
       - '40'
     body:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Sat, 03 Oct 2015 22:51:13 GMT
+  recorded_at: Sun, 22 Nov 2015 22:41:27 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -60,20 +60,20 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"f11c118ac1f73d61c33c0fe3b83a4bbe"
+      - W/"74b2d44bf497a9fd738cca489f42fbb9"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 0d392097-4546-4dea-aed7-aa78812b2cc6
+      - 0f51511a-bd18-4e25-b445-1c417705be82
       X-Runtime:
-      - '0.076062'
+      - '0.080074'
       Content-Length:
       - '250'
     body:
       encoding: UTF-8
-      string: '{"_id":"56105be187f6432346000000","created_at":"2015-10-03T22:51:13Z","updated_at":"2015-10-03T22:51:13Z","name":"John","email":"john@doe.net","locale":"en","api_key":"d4e4bcc95dbaa0bc964fe5d759af3e17ae87b55f","super_admin":false,"local_admin":false}'
+      string: '{"_id":"56524497c36511cdf8000000","created_at":"2015-11-22T22:41:27Z","updated_at":"2015-11-22T22:41:27Z","name":"John","email":"john@doe.net","locale":"en","api_key":"5c57cd2719be65bf16693465814086c461304f27","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Sat, 03 Oct 2015 22:51:13 GMT
+  recorded_at: Sun, 22 Nov 2015 22:41:27 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -97,23 +97,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"a9163fdeb161e2c161f3a0f3efe49ba1"
+      - W/"3385da6413addda803c3126c1b4554b3"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 45b0e958-c517-473e-aabb-6c905328665a
+      - afa7856b-4434-4526-b547-a84bd3ba5f42
       X-Runtime:
-      - '0.016623'
+      - '0.016850'
       Content-Length:
       - '32'
     body:
       encoding: UTF-8
-      string: '{"token":"a2muK9TeBmVrpA5XrYQa"}'
+      string: '{"token":"RTjjUayPdSpdSFfKVGja"}'
     http_version: 
-  recorded_at: Sat, 03 Oct 2015 22:51:13 GMT
+  recorded_at: Sun, 22 Nov 2015 22:41:27 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=a2muK9TeBmVrpA5XrYQa
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=RTjjUayPdSpdSFfKVGja
     body:
       encoding: US-ASCII
       string: ''
@@ -123,7 +123,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - a2muK9TeBmVrpA5XrYQa
+      - RTjjUayPdSpdSFfKVGja
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -136,23 +136,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"eca3fa55990117bf008694b4895520d9"
+      - W/"53f74d6bf74667cd139e3766f9cda048"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - fc3ee76e-4de2-4487-bfc4-9b51d7842cd7
+      - fd5d04d4-cad6-469e-8fe8-89fd61802def
       X-Runtime:
-      - '0.027375'
+      - '0.034500'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"56105bac87f6432326000000","created_at":"2015-10-03T22:50:20Z","updated_at":"2015-10-03T22:50:20Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"56524484c36511cdd5000000","created_at":"2015-11-22T22:41:08Z","updated_at":"2015-11-22T22:41:08Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Sat, 03 Oct 2015 22:51:13 GMT
+  recorded_at: Sun, 22 Nov 2015 22:41:27 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=a2muK9TeBmVrpA5XrYQa
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=RTjjUayPdSpdSFfKVGja
     body:
       encoding: US-ASCII
       string: ''
@@ -162,7 +162,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - a2muK9TeBmVrpA5XrYQa
+      - RTjjUayPdSpdSFfKVGja
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -175,18 +175,18 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"eca3fa55990117bf008694b4895520d9"
+      - W/"53f74d6bf74667cd139e3766f9cda048"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - f29a44e9-95b9-46ca-950c-522f4fc36cee
+      - 7da8b735-01ee-4549-9d81-da3281957b25
       X-Runtime:
-      - '0.013873'
+      - '0.018901'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"56105bac87f6432326000000","created_at":"2015-10-03T22:50:20Z","updated_at":"2015-10-03T22:50:20Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"56524484c36511cdd5000000","created_at":"2015-11-22T22:41:08Z","updated_at":"2015-11-22T22:41:08Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Sat, 03 Oct 2015 22:51:13 GMT
+  recorded_at: Sun, 22 Nov 2015 22:41:27 GMT
 recorded_with: VCR 2.9.3
