--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -27,16 +27,16 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 1eeb9688-e4f0-4a25-8bbb-8f79f152e003
+      - 1fcd235f-2fd4-484d-b19b-5f5e55fb7160
       X-Runtime:
-      - '0.019606'
+      - '0.426809'
       Content-Length:
       - '40'
     body:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Fri, 04 Dec 2015 14:21:16 GMT
+  recorded_at: Mon, 28 Dec 2015 17:00:21 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -60,20 +60,20 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"7d05e74769a4e3a32ddc19de535ace0d"
+      - W/"f66691bbb875d9f3fee56872dd4357c0"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 14d9561a-97bf-4b9f-adad-488353d1dc13
+      - a7ad2e2f-02a6-45f9-bebb-2a164d79ef21
       X-Runtime:
-      - '0.070429'
+      - '0.095295'
       Content-Length:
       - '250'
     body:
       encoding: UTF-8
-      string: '{"_id":"5661a15c87f64302c9000043","created_at":"2015-12-04T14:21:16Z","updated_at":"2015-12-04T14:21:16Z","name":"John","email":"john@doe.net","locale":"en","api_key":"bebc2256830ef12eae85623a39158267e12e49c3","super_admin":false,"local_admin":false}'
+      string: '{"_id":"56816aa5c36511b945000000","created_at":"2015-12-28T17:00:21Z","updated_at":"2015-12-28T17:00:21Z","name":"John","email":"john@doe.net","locale":"en","api_key":"d9fdc60a37a1400c47062a7570a94d5d4d9429cb","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Fri, 04 Dec 2015 14:21:16 GMT
+  recorded_at: Mon, 28 Dec 2015 17:00:21 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -97,23 +97,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"9ad33576c3616b662c8993aff5fb3c0e"
+      - W/"e22f41975ebd531e4aed59a4eb6af2c3"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 03f2dcd0-5c95-4859-b556-dd95643dbc07
+      - 77337468-f122-4993-af3f-80e6d67f2f8a
       X-Runtime:
-      - '0.018220'
+      - '0.016942'
       Content-Length:
       - '32'
     body:
       encoding: UTF-8
-      string: '{"token":"N-ddi-7z-19pXmkRRgq_"}'
+      string: '{"token":"hrYx8TeGaoKr7Sm_5EcB"}'
     http_version: 
-  recorded_at: Fri, 04 Dec 2015 14:21:16 GMT
+  recorded_at: Mon, 28 Dec 2015 17:00:21 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=N-ddi-7z-19pXmkRRgq_
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=hrYx8TeGaoKr7Sm_5EcB
     body:
       encoding: US-ASCII
       string: ''
@@ -123,7 +123,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - N-ddi-7z-19pXmkRRgq_
+      - hrYx8TeGaoKr7Sm_5EcB
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -136,23 +136,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"46c8dfee2ff366b7a6ec27cea9505afb"
+      - W/"c5588acd1b14ead6ab02fac61bb8b0e2"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - b43a45a2-0e95-4f9a-8abf-39b098fc98fc
+      - 5acc9861-9676-4f8c-8454-edcc80231c6b
       X-Runtime:
-      - '0.028692'
+      - '0.033291'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"5661a14f87f643077a000000","created_at":"2015-12-04T14:21:03Z","updated_at":"2015-12-04T14:21:03Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"56816a4ec36511b922000000","created_at":"2015-12-28T16:58:54Z","updated_at":"2015-12-28T16:58:54Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Fri, 04 Dec 2015 14:21:16 GMT
+  recorded_at: Mon, 28 Dec 2015 17:00:21 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=N-ddi-7z-19pXmkRRgq_
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=hrYx8TeGaoKr7Sm_5EcB
     body:
       encoding: US-ASCII
       string: ''
@@ -162,7 +162,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - N-ddi-7z-19pXmkRRgq_
+      - hrYx8TeGaoKr7Sm_5EcB
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -175,18 +175,18 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"46c8dfee2ff366b7a6ec27cea9505afb"
+      - W/"c5588acd1b14ead6ab02fac61bb8b0e2"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - a6cc68eb-4757-4dc3-a9ca-bb2652068468
+      - 5c201a69-0fe0-4817-995c-c36af1a28310
       X-Runtime:
-      - '0.017889'
+      - '0.019197'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"5661a14f87f643077a000000","created_at":"2015-12-04T14:21:03Z","updated_at":"2015-12-04T14:21:03Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"56816a4ec36511b922000000","created_at":"2015-12-28T16:58:54Z","updated_at":"2015-12-28T16:58:54Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Fri, 04 Dec 2015 14:21:16 GMT
-recorded_with: VCR 2.9.3
+  recorded_at: Mon, 28 Dec 2015 17:00:21 GMT
+recorded_with: VCR 3.0.0
