--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -27,16 +27,16 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 1fcd235f-2fd4-484d-b19b-5f5e55fb7160
+      - 6a1f30ca-31f3-42cd-87c1-36cc0f7d9afc
       X-Runtime:
-      - '0.426809'
+      - '0.030310'
       Content-Length:
       - '40'
     body:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Mon, 28 Dec 2015 17:00:21 GMT
+  recorded_at: Tue, 05 Jan 2016 02:33:23 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -60,20 +60,20 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"f66691bbb875d9f3fee56872dd4357c0"
+      - W/"47c61faa89c576c552d7d76a2d254b73"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - a7ad2e2f-02a6-45f9-bebb-2a164d79ef21
+      - 327b70a6-11e6-4a17-b7cb-6c4218b7fb03
       X-Runtime:
-      - '0.095295'
+      - '0.045889'
       Content-Length:
       - '250'
     body:
       encoding: UTF-8
-      string: '{"_id":"56816aa5c36511b945000000","created_at":"2015-12-28T17:00:21Z","updated_at":"2015-12-28T17:00:21Z","name":"John","email":"john@doe.net","locale":"en","api_key":"d9fdc60a37a1400c47062a7570a94d5d4d9429cb","super_admin":false,"local_admin":false}'
+      string: '{"_id":"568b2b74c36511390b0000c7","created_at":"2016-01-05T02:33:24Z","updated_at":"2016-01-05T02:33:24Z","name":"John","email":"john@doe.net","locale":"en","api_key":"f8d1951148b1c5881dda922708155e429f5dd6d1","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Mon, 28 Dec 2015 17:00:21 GMT
+  recorded_at: Tue, 05 Jan 2016 02:33:24 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -97,23 +97,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"e22f41975ebd531e4aed59a4eb6af2c3"
+      - W/"a4a0edc4d3d366b03b86b123b06c0a86"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 77337468-f122-4993-af3f-80e6d67f2f8a
+      - a15f71d8-757e-4c98-b5b5-4f4b57cb36c3
       X-Runtime:
-      - '0.016942'
+      - '0.019165'
       Content-Length:
       - '32'
     body:
       encoding: UTF-8
-      string: '{"token":"hrYx8TeGaoKr7Sm_5EcB"}'
+      string: '{"token":"kyprbq3YxVS4jMLXrjAK"}'
     http_version: 
-  recorded_at: Mon, 28 Dec 2015 17:00:21 GMT
+  recorded_at: Tue, 05 Jan 2016 02:33:24 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=hrYx8TeGaoKr7Sm_5EcB
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=kyprbq3YxVS4jMLXrjAK
     body:
       encoding: US-ASCII
       string: ''
@@ -123,7 +123,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - hrYx8TeGaoKr7Sm_5EcB
+      - kyprbq3YxVS4jMLXrjAK
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -136,23 +136,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"c5588acd1b14ead6ab02fac61bb8b0e2"
+      - W/"213b4ad78c990c366b689c2ab41e7c48"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 5acc9861-9676-4f8c-8454-edcc80231c6b
+      - b62c3e97-56fe-4768-99c8-31b072a638e4
       X-Runtime:
-      - '0.033291'
+      - '0.020263'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"56816a4ec36511b922000000","created_at":"2015-12-28T16:58:54Z","updated_at":"2015-12-28T16:58:54Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"568b2aa2c3651138ee000000","created_at":"2016-01-05T02:29:54Z","updated_at":"2016-01-05T02:29:54Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Mon, 28 Dec 2015 17:00:21 GMT
+  recorded_at: Tue, 05 Jan 2016 02:33:24 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=hrYx8TeGaoKr7Sm_5EcB
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=kyprbq3YxVS4jMLXrjAK
     body:
       encoding: US-ASCII
       string: ''
@@ -162,7 +162,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - hrYx8TeGaoKr7Sm_5EcB
+      - kyprbq3YxVS4jMLXrjAK
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -175,18 +175,18 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"c5588acd1b14ead6ab02fac61bb8b0e2"
+      - W/"213b4ad78c990c366b689c2ab41e7c48"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 5c201a69-0fe0-4817-995c-c36af1a28310
+      - 34abc7af-671f-48d5-ad42-041701b492c6
       X-Runtime:
-      - '0.019197'
+      - '0.019356'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"56816a4ec36511b922000000","created_at":"2015-12-28T16:58:54Z","updated_at":"2015-12-28T16:58:54Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"568b2aa2c3651138ee000000","created_at":"2016-01-05T02:29:54Z","updated_at":"2016-01-05T02:29:54Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Mon, 28 Dec 2015 17:00:21 GMT
+  recorded_at: Tue, 05 Jan 2016 02:33:24 GMT
 recorded_with: VCR 3.0.0
