--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -27,16 +27,16 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 6a1f30ca-31f3-42cd-87c1-36cc0f7d9afc
+      - 585b1576-d444-46b5-ba65-769f74c31c23
       X-Runtime:
-      - '0.030310'
+      - '0.563626'
       Content-Length:
       - '40'
     body:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Tue, 05 Jan 2016 02:33:23 GMT
+  recorded_at: Sat, 16 Jan 2016 23:10:25 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -60,20 +60,20 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"47c61faa89c576c552d7d76a2d254b73"
+      - W/"068d0ca64afd07ad1a18998dd22d1786"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 327b70a6-11e6-4a17-b7cb-6c4218b7fb03
+      - 36c08f2b-6675-44bb-aac0-c5bc15a702ca
       X-Runtime:
-      - '0.045889'
+      - '0.084403'
       Content-Length:
       - '250'
     body:
       encoding: UTF-8
-      string: '{"_id":"568b2b74c36511390b0000c7","created_at":"2016-01-05T02:33:24Z","updated_at":"2016-01-05T02:33:24Z","name":"John","email":"john@doe.net","locale":"en","api_key":"f8d1951148b1c5881dda922708155e429f5dd6d1","super_admin":false,"local_admin":false}'
+      string: '{"_id":"569acde1c3651121bb000000","created_at":"2016-01-16T23:10:25Z","updated_at":"2016-01-16T23:10:25Z","name":"John","email":"john@doe.net","locale":"en","api_key":"2ce9ab5c3bf6986eab28ce4413580192b8c36c0b","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Tue, 05 Jan 2016 02:33:24 GMT
+  recorded_at: Sat, 16 Jan 2016 23:10:25 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -97,23 +97,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"a4a0edc4d3d366b03b86b123b06c0a86"
+      - W/"e5bf42b7c935f3c18ddae07414fd42a4"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - a15f71d8-757e-4c98-b5b5-4f4b57cb36c3
+      - 82537a76-3b55-4c6a-a536-739c7314d36d
       X-Runtime:
-      - '0.019165'
+      - '0.017771'
       Content-Length:
       - '32'
     body:
       encoding: UTF-8
-      string: '{"token":"kyprbq3YxVS4jMLXrjAK"}'
+      string: '{"token":"gWL44rqJvEqooM9RczSW"}'
     http_version: 
-  recorded_at: Tue, 05 Jan 2016 02:33:24 GMT
+  recorded_at: Sat, 16 Jan 2016 23:10:25 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=kyprbq3YxVS4jMLXrjAK
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=gWL44rqJvEqooM9RczSW
     body:
       encoding: US-ASCII
       string: ''
@@ -123,7 +123,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - kyprbq3YxVS4jMLXrjAK
+      - gWL44rqJvEqooM9RczSW
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -136,23 +136,23 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"213b4ad78c990c366b689c2ab41e7c48"
+      - W/"23efaf347eb8d4c795a5a4db30ff339c"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - b62c3e97-56fe-4768-99c8-31b072a638e4
+      - fbefeb2e-6b2d-4c5e-bbb0-81ac65da1bda
       X-Runtime:
-      - '0.020263'
+      - '0.032607'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"568b2aa2c3651138ee000000","created_at":"2016-01-05T02:29:54Z","updated_at":"2016-01-05T02:29:54Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"569acd6cc36511216f000000","created_at":"2016-01-16T23:08:28Z","updated_at":"2016-01-16T23:08:28Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Tue, 05 Jan 2016 02:33:24 GMT
+  recorded_at: Sat, 16 Jan 2016 23:10:25 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=kyprbq3YxVS4jMLXrjAK
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=gWL44rqJvEqooM9RczSW
     body:
       encoding: US-ASCII
       string: ''
@@ -162,7 +162,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - kyprbq3YxVS4jMLXrjAK
+      - gWL44rqJvEqooM9RczSW
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -175,18 +175,18 @@ http_interactions:
       Content-Type:
       - application/json
       Etag:
-      - W/"213b4ad78c990c366b689c2ab41e7c48"
+      - W/"23efaf347eb8d4c795a5a4db30ff339c"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 34abc7af-671f-48d5-ad42-041701b492c6
+      - 2e1a0de0-d453-4297-9997-49858aa1f746
       X-Runtime:
-      - '0.019356'
+      - '0.019324'
       Content-Length:
       - '261'
     body:
       encoding: UTF-8
-      string: '{"_id":"568b2aa2c3651138ee000000","created_at":"2016-01-05T02:29:54Z","updated_at":"2016-01-05T02:29:54Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"569acd6cc36511216f000000","created_at":"2016-01-16T23:08:28Z","updated_at":"2016-01-16T23:08:28Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Tue, 05 Jan 2016 02:33:24 GMT
+  recorded_at: Sat, 16 Jan 2016 23:10:25 GMT
 recorded_with: VCR 3.0.0
